--- a/stroboskop.html
+++ b/stroboskop.html
@@ -13,7 +13,7 @@
 <glava>
 	<table style="width: 100%;">
 		<tr>
-			<td style="width: 200px;">
+			<td style="width: 200px; text-align:right;">
 				Izberi barve:
 			</td>
 			<td style="width: calc(100% - 20px);">
@@ -25,10 +25,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td>
+			<td style="text-align:right;">
 				Časovni interval: 
 			</td>
 			<td>
+				
 				od najmanj <input id="min" value="50" /> ms do največ
 				<input id="max" value="500" /> ms
 			</td>
